# Open-Dash

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.claude/: launch.json
admin/: admin.css  admin.js  index.html
docs/ideation/: 2026-07-17-open-dash-feature-ideas.md
docs/plans/: 2026-07-17-001-feat-scene-modes-plan.md
server/: __init__.py  admin_app.py  api_routes.py  gifs.py  main.py  run.py
server/providers/: __init__.py  air_quality.py  ical.py  octoprint.py  pi_stats.py  rss.py  space_weather.py  stocks.py  weather.py  youtube.py
server/shared/: __init__.py  alerts.py  cache.py  config.py  devices.py  events.py  geo.py  migrations.py  providers.py  redact.py  safe_fetch.py  schema.py  secrets.py  staticfiles.py  system_update.py
tests/: test_alerts.py  test_config.py  test_devices.py  test_geo.py  test_redaction.py  test_safe_fetch.py  test_scenes.py  test_schedule_js.mjs  test_secrets_redaction.py  test_system_update.py
web/: dashboard.seed.json  index.html
web/css/: dashboard.css
web/js/: app.js  device.js  scenes.js
web/js/widgets/: air-quality.js  clock.js  dom.js  embed.js  ical.js  iframe.js  image.js  index.js  octoprint.js  pi-stats.js  registry.js  rss.js  slideshow.js  space-imagery.js  space-weather.js  stocks.js  text.js  video.js  weather.js  youtube-live.js
